# django-demo-app

./: .env.example  Makefile  README.md  manage.py  pyproject.toml
demo_app/: __init__.py  adapters.py  apps.py  auth_middleware.py  context_processors.py  session_cookie_auth_middleware.py  urls.py  wristband.py
demo_app/views/: __init__.py  api_views.py  auth_views.py  classic_api_views.py  drf_api_views.py  page_views.py
demo_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/demo_app/: classic.html  drf.html  hello_world.html  home.html  profile.html
